refactor(channel): use Pushy for APNs
Replace hand-rolled JWT/PEM/HTTP-2 plumbing with Pushy ApnsClient.
Properties shape is preserved except url is now optional — null means
production APNs, 'sandbox' switches to development, anything else is
parsed as host[:port]. dispose() shuts down the Netty connection pool
on cache refresh and PreDestroy.

The custom ApnsMockServer is deleted; tests inject a Mockito-mocked
ApnsClient via a new forTesting factory and assert against the
SimpleApnsPushNotification handed off to Pushy.

Also pre-registers com.aliyun:dingtalk:2.1.49 used by the next commit.